tests/parser/syntax-errors/token-not-found/expected_newline_func_def.choc
# RUN: choco-opt "%s" | filecheck "%s" --strict-whitespace

def foo(): pass

# CHECK:      SyntaxError (line 3, column 12): token of kind TokenKind.NEWLINE not found.
# CHECK-NEXT: >>>def foo(): pass
# CHECK-NEXT: >>>-----------^
